[minor] add java 8 support